--- a/src/Components/AllProductsPage/allproducts.module.css
+++ b/src/Components/AllProductsPage/allproducts.module.css
@@ -1,13 +1,24 @@
 .productsPage{
-    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4vh;
     padding: 2vh 0vh;
 }
+.productsPage button{
+    height: 5vh;
+    width: 8vw;
+    font-size: 16px;
+    background-color: #F6F5F2;
+    border: 1px solid gray;
+    border-radius: 4px;
+    transition: transform 0.2s ease-in-out;
+    color: gray;
+}
+.productsPage button:hover{
+    transform: scale(1.1);
+}
 .allProducts{
-    /* border: 1px solid black; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 8vh;
