--- a/src/Components/CartPage/cart.module.css
+++ b/src/Components/CartPage/cart.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 1rem;
+    padding: 2vh 1vh;
     width: 20vh;
     position: fixed;
     top: 16vh;
@@ -23,16 +23,19 @@
     width: 12rem;
     border: 1px solid lightgray;
 }
-
+.cart .priceContainer h3{
+    margin-top: 0px;
+}
 .cart .priceContainer  span{
     font-size: 18px;
     font-weight: 550;
+    color: gray;
 }
 .cart .priceContainer button{
     height: auto;
     width: 8rem;
-    padding: 0.5rem;
-    border-radius: 10px;
+    padding: 0.5vh;
+    border-radius: 5px;
     border: none;
     background-color: #F6F5F2;
     color: gray;
@@ -43,14 +46,10 @@
 .cart .priceContainer  button:hover{
     transform: scale(1.1);
     cursor: pointer;
-    background-color: #454545;
-}
-.cart .priceContainer  button:active{
-    background-color: #252525;
 }
 .cart .cartItems{
     width: 80%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 8vh;
+    gap: 6vh;
 }
