--- a/src/Components/ProductsDetailsPage/detailsPage.module.css
+++ b/src/Components/ProductsDetailsPage/detailsPage.module.css
@@ -4,12 +4,13 @@
     gap: 1vw;
     align-items: center;
     padding: 0px 8px;
-    height: 30vh;
+    height: 32vh;
     width: 50vw;
     margin: 4vh auto;
     background-color: white;
     border-radius: 10px;
     border: none;
+    box-shadow: 0 2px 8px 0 rgba(33, 39, 71, 0.4);
 }
 .detailsCard .imgContainer{
     height: 80%;
@@ -36,7 +37,18 @@
 .detailsCard .aboutProduct .editbtn{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
+    border: 1px solid gray;
+    background-color: #F0EBE3;
+    width: 6vw;
+    padding: 1vh;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+.detailsCard .aboutProduct .editbtn:hover{
+    transform: scale(1.1);
 }
 .detailsCard .aboutProduct .editbtn span{
     font-size: 20px;
@@ -55,7 +67,18 @@
 }
 .detailsCard .productDetails .deletebtn{
     display: flex;
-    gap: 5px
+    gap: 5px;
+    justify-content: center;
+    border: 1px solid gray;
+    background-color: #F0EBE3;
+    width: 6vw;
+    padding: 1vh;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+.detailsCard .productDetails .deletebtn:hover{
+    transform: scale(1.1);
 }
 .detailsCard .productDetails .deletebtn img{
     height: 20px;
