--- a/src/Components/AllProductsPage/allproducts.module.css
+++ b/src/Components/AllProductsPage/allproducts.module.css
@@ -5,17 +5,30 @@
     gap: 4vh;
     padding: 2vh 0vh;
 }
-.productsPage button{
+.productsPage .loader{
+    margin: 20vh 50vw;
+}
+.productsPage .sortbtn{
     height: 5vh;
-    width: 8vw;
-    font-size: 16px;
+    padding-right: 4px;
     background-color: #F6F5F2;
     border: 1px solid gray;
     border-radius: 4px;
     transition: transform 0.2s ease-in-out;
+    display: flex;
+    align-items: center;
+}
+.productsPage .sortbtn button{
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
     color: gray;
 }
-.productsPage button:hover{
+.productsPage .sortbtn img{
+    height: 15px;
+}
+.productsPage .sortbtn:hover{
     transform: scale(1.1);
 }
 .allProducts{
